--- a/css/style.css
+++ b/css/style.css
@@ -176,3 +176,31 @@
   font-size: 18px;
   color: #474747;
 }
+.article{
+  max-width: 1140px;
+  margin: 0 auto;
+}
+.article-content{
+  display: flex;
+  gap: 50px;
+  margin: 50px 0;
+}
+.article-img{
+  width: 500px;
+  height: 500px;
+  border-radius: 5px;
+}
+.article-title{
+  font-size: 35px;
+  font-weight: 700;
+  color: #181818;
+  margin-bottom: 20px;
+}
+.article-description{
+  font-size: 18px;
+  font-weight: 500;
+  color: #474747;
+}
+.btn-2nd{
+  width: 300px;
+}
