--- a/css/style.css
+++ b/css/style.css
@@ -183,7 +183,7 @@
 .article-content{
   display: flex;
   gap: 50px;
-  margin: 50px 0;
+  margin: 130px 0;
 }
 .article-img{
   width: 500px;
@@ -195,12 +195,52 @@
   font-weight: 700;
   color: #181818;
   margin-bottom: 20px;
+  
 }
 .article-description{
   font-size: 18px;
   font-weight: 500;
-  color: #474747;
+  color: #757575;
 }
 .btn-2nd{
   width: 300px;
+}
+.get-update-section{
+  max-width: 1140px;
+  margin: 0 auto;
+  text-align: center;
+}
+.get-update-title{
+  font-size: 35px;
+  font-weight: 700;
+  color: #181818;
+  margin: 130px 0 30px 0;
+}
+.get-update-description{
+  font-size: 20px;
+  font-weight: 700;
+  color: #757575;
+  margin-bottom: 50px;
+}
+.subsribe{
+  background-color: #ffffe0;
+  border-radius: 5px;
+  margin-bottom: 100px;
+}
+#email{
+  border: none;
+  padding: 30px 100px;
+  margin: 100px 0 100px;
+  font-size: 20px;
+  border-radius: 5px;
+  font-weight: 500;
+}
+#submit{
+  border: none;
+  padding: 30px 70px;
+  margin: 100px 0 100px;
+  font-size: 20px;
+  border-radius: 5px;
+  font-weight: 500;
+  background-color: #FF5959; 
 }
