--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 *{
   margin: 0;
   padding: 0;
-  font-family:Verdana, Geneva, Tahoma, sans-serif;
+  font-family: 'Manrope', sans-serif;
 }
 /* Header Banner Styles */
 .header{
@@ -243,4 +243,20 @@
   border-radius: 5px;
   font-weight: 500;
   background-color: #FF5959; 
+}
+.footer{
+  background-color: #000000;
+  text-align: center;
+  padding: 100px;
+}
+.footer-title{
+  color: #FF5959;
+  font-family: 'Lobster', cursive;
+  font-size: 45px;
+  font-weight: 700;
+}
+.footer-description{
+  color: #ffffff;
+  font-size: 20px;
+  font-weight: 300;
 }
