--- a/css/style.css
+++ b/css/style.css
@@ -224,12 +224,12 @@
 }
 .subsribe{
   background-color: #ffffe0;
-  border-radius: 5px;
+  
   margin-bottom: 100px;
 }
 #email{
   border: none;
-  padding: 30px 100px;
+  padding: 20px 100px 20px 10px ;
   margin: 100px 0 100px;
   font-size: 20px;
   border-radius: 5px;
@@ -237,8 +237,8 @@
 }
 #submit{
   border: none;
-  padding: 30px 70px;
-  margin: 100px 0 100px;
+  padding: 20px 70px;
+  margin: 100px 0 100px -4px;
   font-size: 20px;
   border-radius: 5px;
   font-weight: 500;
